# academia-backend-2

./: Dockerfile
1-docker/: README.md
1-docker/src/: Dockerfile  index.html  nginx.conf
2-docker-volumes/: README.md
2-docker-volumes/src/: Dockerfile  a.sql
3-docker-env/: README.md
3-docker-env/src/: .env  Dockerfile
4-docker-steps/: README.md
4-docker-steps/src/: Dockerfile
4-docker-steps/src/app/: package-lock.json
5-docker-compose/: README.md
5-docker-compose/src/: .env  docker-compose.yml
5-docker-compose/src/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
5-docker-compose/src/api/project/: db.sqlite3
5-docker-compose/src/api/project/app/migrations/: 0001_initial.py
5-docker-compose/src/api/project/project/: settings.py
5-docker-compose/src/frontend/: Dockerfile
6-python-fastapi/: .gitignore  README.md  docker-compose.yml
6-python-fastapi/api/: Dockerfile  main.py  pyproject.toml
7-python-fastapi-routes/src/: main.py  pyproject.toml
8-python-fastapi-database/api/: main.py  pyproject.toml
8-python-fastapi-database/api/alembic/: env.py
8-python-fastapi-database/api/alembic/versions/: 11345813ae87_add_token_to_user.py  3e2c00a36131_add_user_name.py  6b73523ae53e_add_users_table.py  a223ac7b107e_add_user_table.py  bffc9808dde5_add_name_to_users_table.py
8-python-fastapi-database/api/crud/: users.py
8-python-fastapi-database/api/models/: database.py  users.py
8-python-fastapi-database/api/routes/: login.py  users.py
8-python-fastapi-database/api/utils/: auth.py  database.py  exceptions.py
(+4 files in other folders)
