[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Luis E Moreno <emilio@touchof.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
